- Add ability to add potion effects to claims.
  That claim will then apply that effect to any player inside the claim
  Specify potions with <id;amplifier>
- Add EDITPOTIONS permission for that. There are no limits to potion effects so
  this should be admin reserved only.
  Default global value is ALLFALSE so disabled for that reason

Flan 1.4.2
======================
- Fix a ticking player crash
- Fix anvil gui not updating client xp use
- Add ability to name claims.
  Names have to be unique for each player and claim.
  No additional feature for that (yet)
- Add blockEntityTagIgnore config
  Blockentities are checked against the strings here and if their tag
  matches one they will be ignored for a permission check.
  Useful for blockentities that should only be accessible under certain circumstances.
  Default values: ["IsDeathChest"] for vanilla death chest mod (only for version 2.0.0+)
- Add entityTagIgnore config same as blockEntityTagIgnore but it will only
  check against scoreboard tags. Default "graves.marker" is for vanilla tweaks graves.
  Keep in mind that the items dropped by graves are not player bound so if a claim disables
  item pickups you will not be able to pick up the items

Flan 1.4.1
======================
- Change globalDefaultPerms to use a version where you can specify if its modifiable or not
  Valid values are:
  ALLTRUE: Permission is true everywhere and players are unable to change it in claims
  ALLFALSE: Permission is false everywhere and players are unable to change it in claims
  TRUE: Permission is true in non claimed areas
  FALSE: Permission is false in non claimed areas
  Old configs will get auto converted: false -> ALLFALSE and true -> ALLTRUE
  Basically now a worldguard version
- Add locking items when the player dies so other players cant pick it up.
  Use /flan unlockItems to allow it.
- /flan help finished: command are clickable now and give additional info on the commands