@@ -1,6 +1,7 @@
 package io.github.flemmli97.flan.player;
 
 import com.google.gson.JsonObject;
+import io.github.flemmli97.flan.Flan;
 import io.github.flemmli97.flan.api.IPlayerData;
 import io.github.flemmli97.flan.claim.Claim;
 import io.github.flemmli97.flan.claim.ClaimStorage;
@@ -11,13 +12,18 @@ import net.minecraft.util.WorldSavePath;
 
 import java.io.File;
 import java.io.FileReader;
+import java.io.FileWriter;
 import java.io.IOException;
+import java.time.LocalDateTime;
 import java.util.Collection;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.UUID;
 
 public class OfflinePlayerData implements IPlayerData {
 
     public final int claimBlocks, additionalClaimBlocks;
+    public final LocalDateTime lastOnline;
     public final UUID owner;
     public final MinecraftServer server;
 
@@ -26,15 +32,17 @@ public class OfflinePlayerData implements IPlayerData {
         int claim = ConfigHandler.config.startingBlocks;
         int add = 0;
         this.owner = uuid;
+        LocalDateTime last = LocalDateTime.now();
         if (dir.exists()) {
             try {
                 File file = new File(dir, uuid + ".json");
                 if (file.exists()) {
                     FileReader reader = new FileReader(file);
                     JsonObject obj = ConfigHandler.GSON.fromJson(reader, JsonObject.class);
+                    reader.close();
                     claim = obj.get("ClaimBlocks").getAsInt();
                     add = obj.get("AdditionalBlocks").getAsInt();
-                    reader.close();
+                    last = LocalDateTime.parse(obj.get("LastSeen").getAsString(), Flan.onlineTimeFormatter);
                 }
             } catch (IOException e) {
                 e.printStackTrace();
@@ -42,6 +50,36 @@ public class OfflinePlayerData implements IPlayerData {
         }
         this.claimBlocks = claim;
         this.additionalClaimBlocks = add;
+        this.lastOnline = last;
+        this.server = server;
+    }
+
+    private OfflinePlayerData(MinecraftServer server, File dataFile, UUID uuid) {
+        int claim = ConfigHandler.config.startingBlocks;
+        int add = 0;
+        LocalDateTime last = LocalDateTime.now();
+        try {
+            FileReader reader = new FileReader(dataFile);
+            JsonObject obj = ConfigHandler.GSON.fromJson(reader, JsonObject.class);
+            reader.close();
+
+            claim = obj.get("ClaimBlocks").getAsInt();
+            add = obj.get("AdditionalBlocks").getAsInt();
+            if (obj.has("LastSeen")) {
+                last = LocalDateTime.parse(obj.get("LastSeen").getAsString(), Flan.onlineTimeFormatter);
+            } else {
+                obj.addProperty("LastSeen", last.format(Flan.onlineTimeFormatter));
+                FileWriter write = new FileWriter(dataFile);
+                ConfigHandler.GSON.toJson(obj, write);
+                write.close();
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        this.claimBlocks = claim;
+        this.additionalClaimBlocks = add;
+        this.lastOnline = last;
+        this.owner = uuid;
         this.server = server;
     }
 
@@ -64,5 +102,34 @@ public class OfflinePlayerData implements IPlayerData {
                 usedClaimsBlocks += claims.stream().filter(claim -> !claim.isAdminClaim()).mapToInt(Claim::getPlane).sum();
         }
         return usedClaimsBlocks;
+    }
+
+    public static Map<UUID, OfflinePlayerData> collectAllPlayerData(MinecraftServer server) {
+        File dir = new File(server.getSavePath(WorldSavePath.PLAYERDATA).toFile(), "/claimData/");
+        Map<UUID, OfflinePlayerData> playerDatas = new HashMap<>();
+        if (dir.exists()) {
+            for (File data : dir.listFiles()) {
+                if (data.getName().endsWith(".json")) {
+                    UUID uuid = UUID.fromString(data.getName().replace(".json", ""));
+                    playerDatas.put(uuid, new OfflinePlayerData(server, data, uuid));
+                }
+            }
+        }
+        return playerDatas;
+    }
+
+    public static void deleteUnusedClaims(MinecraftServer server, ClaimStorage storage, ServerWorld world) {
+        if (ConfigHandler.config.inactivityTime == -1)
+            return;
+        Map<UUID, OfflinePlayerData> playerData = collectAllPlayerData(server);
+        LocalDateTime now = LocalDateTime.now();
+        playerData.forEach((uuid, data) -> {
+            if (now.isAfter(data.lastOnline.plusDays(ConfigHandler.config.inactivityTime))
+                    && data.claimBlocks + data.additionalClaimBlocks < ConfigHandler.config.inactivityBlocksMax) {
+                Flan.log("{} Deleting all claims for inactive player {} last seen {}", world.getRegistryKey(), data.owner, data.lastOnline);
+                storage.allClaimsFromPlayer(data.owner)
+                        .forEach(claim -> storage.deleteClaim(claim, true, EnumEditMode.DEFAULT, world));
+            }
+        });
     }
 }
