@@ -15,6 +15,9 @@ Flan 1.5.0
 - Add EDITPOTIONS permission for that. There are no limits to potion effects so
   this should be admin reserved only.
   Default global value is ALLFALSE so disabled for that reason
+- Add claim deletion for inactive players. Added config for that are:
+  inactivityTime - How long in days a player has to be offline for it to check the player
+  inactivityBlocksMax - How much claimblocks the player can have at max for it to delete the claims
 
 Flan 1.4.2
 ======================
